@@ -100,3 +100,34 @@ bucket_with_more_than_one_key: >
       <StorageClass>STANDARD</StorageClass>
     </Contents>
   </ListBucketResult>
+  
+truncated_bucket_with_more_than_one_key: >
+  <ListBucketResult xmlns="http://s3.amazonaws.com/doc/2006-03-01/">
+    <Name>marcel_molina</Name>
+    <Prefix></Prefix>
+    <Marker></Marker>
+    <MaxKeys>2</MaxKeys>
+    <IsTruncated>true</IsTruncated>
+    <Contents>
+      <Key>beluga_baby.jpg</Key>
+      <LastModified>2006-10-05T02:55:10.000Z</LastModified>
+      <ETag>&quot;b2453d4a39a7387674a8c505112a2f0b&quot;</ETag>
+      <Size>35807</Size>
+      <Owner>
+        <ID>bb2041a25975c3d4ce9775fe9e93e5b77a6a9fad97dc7e00686191f3790b13f1</ID>
+        <DisplayName>mmolina@onramp.net</DisplayName>
+      </Owner>
+      <StorageClass>STANDARD</StorageClass>
+    </Contents>
+    <Contents>
+      <Key>tongue_overload.jpg</Key>
+      <LastModified>2006-10-05T02:42:22.000Z</LastModified>
+      <ETag>&quot;f21f7c4e8ea6e34b268887b07d6da745&quot;</ETag>
+      <Size>60673</Size>
+      <Owner>
+        <ID>bb2041a25975c3d4ce9775fe9e93e5b77a6a9fad97dc7e00686191f3790b13f1</ID>
+        <DisplayName>mmolina@onramp.net</DisplayName>
+      </Owner>
+      <StorageClass>STANDARD</StorageClass>
+    </Contents>
+  </ListBucketResult>
